charts line+pie+faces+avg

--- a/src/templates/core.html
+++ b/src/templates/core.html
@@ -13,6 +13,10 @@
     <!--### STYLESHEET BLOCK ###-->
     {% include "stylesheet.html" %}
 
+    <!--### EXTRA HEAD SCRIPT ###-->
+    {% block head_script %}
+    {% endblock %}
+
 </head>
 <body>
 
