--- a/src/templates/monitor_list.html
+++ b/src/templates/monitor_list.html
@@ -5,10 +5,14 @@
 <div>
 <div class="list-group">
 {% for obj in instance %}
-  <a href="{% url 'monitors:detail' query=obj.query %}" class="list-group-item">{{ obj.query }}</a>
+  {% if obj != None%}
+    <a href="{% url 'monitors:detail' query=obj.id %}" class="list-group-item">{{ obj.query }}</a>
+  {% endif %}
 {% endfor %}
 </div>
 </div>
+
+
 
 {% endblock %}
 
